[gd_scene load_steps=2 format=3 uid="uid://rju74sc0ppeo"]

[ext_resource type="Script" path="res://Scripts/MainMenu.gd" id="1_a0i63"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_a0i63")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="StartButton" type="Button" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -157.0
offset_top = 194.0
offset_right = 53.0
offset_bottom = 244.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
theme_override_font_sizes/font_size = 30
text = "START GAME"

[node name="Title" type="RichTextLabel" parent="UI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.519965
anchor_right = 0.519965
offset_left = -576.0
offset_right = 576.0
offset_bottom = 159.0
grow_horizontal = 2
theme_override_font_sizes/normal_font_size = 90
bbcode_enabled = true
text = "[center]Hexsweeper[center]"
metadata/_edit_use_anchors_ = true

[node name="Row Size" type="RichTextLabel" parent="UI"]
layout_mode = 0
offset_left = 59.0
offset_top = 190.0
offset_right = 382.0
offset_bottom = 230.0
mouse_filter = 1
bbcode_enabled = true
text = "[center]Row Size: 15"

[node name="Subtract" type="Button" parent="UI/Row Size"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -21.0
offset_right = 26.0
offset_bottom = 21.0
grow_vertical = 2
text = "-"

[node name="Add" type="Button" parent="UI/Row Size"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -26.0
offset_top = -21.0
offset_bottom = 21.0
grow_horizontal = 0
grow_vertical = 2
text = "+"

[node name="Column Size" type="RichTextLabel" parent="UI"]
layout_mode = 0
offset_left = 59.0
offset_top = 291.0
offset_right = 382.0
offset_bottom = 331.0
mouse_filter = 1
bbcode_enabled = true
text = "[center]Column Size: 7"

[node name="Subtract" type="Button" parent="UI/Column Size"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -21.0
offset_right = 26.0
offset_bottom = 21.0
grow_vertical = 2
text = "-"

[node name="Add" type="Button" parent="UI/Column Size"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -26.0
offset_top = -21.0
offset_bottom = 21.0
grow_horizontal = 0
grow_vertical = 2
text = "+"

[node name="BombPercent" type="HSlider" parent="UI"]
layout_mode = 0
offset_left = 20.0
offset_top = 418.0
offset_right = 414.0
offset_bottom = 434.0
min_value = 1.0
max_value = 80.0
value = 20.0
rounded = true

[node name="BombLabel" type="RichTextLabel" parent="UI/BombPercent"]
layout_mode = 0
offset_left = 1.0
offset_top = -25.0
offset_right = 394.0
offset_bottom = 15.0
mouse_filter = 1
text = "Bomb Percentage: 20%"

[connection signal="pressed" from="UI/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="UI/Row Size/Subtract" to="." method="_on_row_subtract_pressed"]
[connection signal="pressed" from="UI/Row Size/Add" to="." method="_on_row_add_pressed"]
[connection signal="pressed" from="UI/Column Size/Subtract" to="." method="_on_column_subtract_pressed"]
[connection signal="pressed" from="UI/Column Size/Add" to="." method="_on_column_add_pressed"]
[connection signal="value_changed" from="UI/BombPercent" to="." method="_on_bomb_percent_value_changed"]
